--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
+# VSCode
+.vscode
 
-# Created by https://www.gitignore.io/api/python
+# Snyk
+.dccache
 
 ### Python ###
 # Byte-compiled / optimized / DLL files
