--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -5,11 +5,6 @@ on:
     branches:
       - "14.0"
 
-  pull_request:
-    branches:
-      - "14.0"
-    types: [closed]
-
 jobs:
   build:
     name: "Build and Push Docker Image"
@@ -18,24 +13,24 @@ jobs:
       - name: Set environment variables
         run: echo "TAG_NAME=${GITHUB_REF_NAME%%[.0]*}" >> $GITHUB_ENV
       - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
+        uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
       - name: Login to DockerHub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Checkout Dockerfile source
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: ${{ secrets.GIT_PRIVATE_REPOSITORY }}
           ref: ${{ github.ref_name }}
           token: ${{ secrets.GIT_AUTH_TOKEN }}
-          set-safe-directory: ''
+          set-safe-directory: ""
           fetch-depth: 0
       - name: Build and push private Docker image
-        uses: docker/build-push-action@v3
+        uses: docker/build-push-action@v5
         with:
           context: "."
           build-args: GIT_AUTH_TOKEN=${{ secrets.GIT_AUTH_TOKEN }}
@@ -96,4 +91,4 @@ jobs:
         run: ssh host 'docker compose --file /home/${{ secrets.SSH_USER }}/odoo/compose.yml stop web'
 
       - name: Start Odoo Server
-        run: ssh host 'docker compose --file /home/${{ secrets.SSH_USER }}/odoo/compose.yml up web --force-recreate --scale web=4 --detach'
+        run: ssh host 'docker compose --file /home/${{ secrets.SSH_USER }}/odoo/compose.yml up web --force-recreate web --scale web=4 --detach'
